added BufferedReader